--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -10,18 +10,18 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
         android:layout_centerHorizontal="true"
-        tools:context="org.amcafee.mapstest.MapsActivity" />
+        tools:context="org.amcafee.mapstest.MapsActivity"
+        android:layout_width="250dp"
+        android:layout_height="250dp" />
 
 
     <ImageView
-        android:layout_width="250dp"
-        android:layout_height="250dp"
+        android:layout_width="200dp"
         android:id="@+id/imgView"
         android:layout_centerHorizontal="true"
-        android:layout_below="@id/map"/>
+        android:layout_below="@id/map"
+        android:layout_height="200dp" />
 
     <TextView
         android:layout_width="wrap_content"
